# rankandsort

./: .gitmodules  CMakeLists.txt  README.md
cmake/: BuildType.cmake  CompilerFlags.cmake
include/fullccrank/: MasterRanker.hpp
include/rankandsort/: MasterRanker.hpp  rankandsort.hpp
include/rankandsort/base/: stdDef.hpp
samples/: CMakeLists.txt
samples/src/: example.cpp  sampleData.hpp
src/: MasterRanker.cpp  rankWith.cpp  rankWith.hpp  rankandsort.cpp
src/model/: recipe.json
src/models/: lowHighModel.c  lowHighModel.h  lowhighModel.h
tests/: CMakeLists.txt
tests/src/: main.cpp  testData.hpp  test_main.cpp
